EDIT: eslint 설정 적용

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+  "parser": "typescript",
+  "singleQuote": true,
+  "semi": true,
+  "useTabs": false,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 120,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
