FEAT: 메인 페이지 작업

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,8 +16,7 @@
     "airbnb-typescript",
     "airbnb/hooks",
     "prettier",
-    "plugin:prettier/recommended",
-    "plugin:storybook/recommended"
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "import/no-cycle": "off",
